# public-opinion-simulations

./: .eslintrc.js  .gitignore  .gitmodules  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-manual.yaml
api/: Dockerfile
run/gcp/: docker-compose.yaml
run/local/: docker-compose.yaml
simulations-api/: .dockerignore  .eslintrc.js  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.build.json
simulations-api/runner/: CMakeLists.txt  main.cpp
simulations-api/src/: app.module.ts  main.ts
simulations-api/src/config/: index.ts
simulations-api/src/simulations/: simulation.dto.ts  simulations.controller.ts  simulations.dto.ts  simulations.events.ts  simulations.gateway.spec.ts  simulations.gateway.ts  simulations.module.ts  simulations.service.spec.ts  simulations.service.ts  simulations.validator.spec.ts  simulations.validator.ts
simulations-api/src/store/: store.module.ts  store.service.spec.ts  store.service.ts
simulations-api/src/utils/: queue.ts  runner.ts
simulations-api/test/: app.e2e-spec.ts  simulations.e2e-spec.ts
simulations-ui/: .env  .eslintrc.js  Dockerfile  Dockerfile-local  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
simulations-ui/public/files/: graph.dot  graph.gam  graph.gexf  graph.json  graph.mat  graph.net
simulations-ui/src/: App.vue  env.d.ts  main.ts
src/: env.d.ts
src/components/: HelloWorld.vue  SigmaExample.vue
src/views/: HomeView.vue
web-ui/: Dockerfile  package.json  vite.config.ts
web-ui/src/: App.vue
(+112 files in other folders)
